--- a/.gitignore
+++ b/.gitignore
@@ -7,17 +7,37 @@
 
 # testing
 /coverage
+/cypress/screenshots
+/cypress/videos
+
+# next.js
+/.next/
+/out/
 
 # production
 /build
 
+#idea
+/.idea
+
 # misc
 .DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
